--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,13 +1,14 @@
-{% extends 'base.html.twig' %}  {# hehehehe #}
+{% extends 'base.html.twig' %}
 
 {% block body %}
-    <h4>Ceci est la home page qui vient du block home.html.twig</h4>
 
-    
-    <h5>Bienvenue : {{ name }}</h5>
-    {% if name == 'Julien' %}
-        <h3>Ton accent est chantant</h3>
-    {% endif %}
+
+    <ul>
+        {% for user in users %}
+            <li>{{ user.name }} qui a : {{ user.age }} ans</li>
+        {% endfor %}
+    </ul>
+
 
 {% endblock %}
 
